=============================================================
Version 3.5.0
=============================================================
 - BugFix: Mutlishop get store on store 0
 - Feature: Return tracking management during shipment
 - Feature: Filters on product export page
=============================================================
Version 3.4.7
=============================================================
 - BugFix  : product_price, original_price in OrderDetail
 - BugFix  : synchronize order number 5 tries to API
=============================================================
Version 3.4.6
=============================================================
 - Feature : Switch env from config prod/preprod
 - Feature : partial_refunded new state to accept
 - BugFix  : flush lengow config on uninstall
 - BugFix  : add memory_limit for sync and export
=============================================================
Version 3.4.5
=============================================================

 - Feature:  Toolbox file details
 - Feature:  Log import params initialized
 - Feature:  Anonymize customer address e-mail in config
 - Bugfix:   Vat number sync update
 - Bugfix:   Order duplicate when delivery_address_id changes
 - Bugfix:   php8.1 address strings data not be null

=============================================================
Version 3.4.4
=============================================================

 - Bugfix: Fixed compatible versions to unlock module installation in Prestashop 8.0
 - Bugfix: Fixed Tools::jsonDecode() and Tools::jsonEncode() functions for json_decode() and json_encode
 - Bugfix: Fixed import of orders in Prestashop backoffice due to the error in LengowAddress.php
 - Bugfix: Fix import customer from order
 - Bugfix: Add ProductAttribute in LengowCart.php for compability for Prestashop 8 during import order in backoffice
 - Bugfix: Fix of the recording of the tracking_number when updating the status of an order on the backoffice side