@@ -5,13 +5,13 @@
 /lengow.php|2b170fa6ec07fe0d015a03879f14dbbc
 /loader.php|d6c4d5b54cd370b43123e8021f8ff6ef
 /config/index.php|be8b25f88c14bddd7711e4585ebae316
-/translations/en.csv|87aa30b992fa1aba5f95f979e713c2af
-/translations/es.csv|eda5fc34d49a20adadda715c84ea1807
-/translations/fr.csv|77a0a1984655d471f3d800dc82fd5732
+/translations/en.csv|8b49bfc650e54f1aa0c9e9669ed159fe
+/translations/es.csv|95cae18395e4e77ea1cfdadd5f6bebd9
+/translations/fr.csv|111bc336565abf16a19908681efb2f50
 /translations/index.php|be8b25f88c14bddd7711e4585ebae316
-/translations/it.csv|3d2561e961b0c4126e069058c61249f8
+/translations/it.csv|f6a39cadace6585ea92e682382cf5e07
 /classes/controllers/LengowHomeController.php|4425c1a0649cdda2e072daabcd7df056
-/classes/controllers/LengowOrderSettingController.php|8e05059fca5548dd9050d9d11c78540d
+/classes/controllers/LengowOrderSettingController.php|e3cdb65b8f510fb2470ceeffae051371
 /classes/controllers/LengowDashboardController.php|a134f00e4abaf5e00f648bb09c782342
 /classes/controllers/LengowMainSettingController.php|e36b3eb18668acacb065cff36718ca44
 /classes/controllers/LengowOrderController.php|723b350c3a764495b221293cd560bbf0
@@ -22,7 +22,7 @@
 /classes/controllers/index.php|912750743c8a1fabf67f14802d4ddd8a
 /classes/controllers/LengowFeedController.php|3c0b07abb80f020596da4326d56c6eec
 /classes/models/LengowBackup.php|f603ffdd7d098d79225873fc92ab4367
-/classes/models/LengowExport.php|7a92e248e5f79b416667533cef3899ba
+/classes/models/LengowExport.php|43f0a0cf161c267a0031e0687b457054
 /classes/models/LengowConfigurationForm.php|073b84ea3884e100a1c31abe6fb17128
 /classes/models/LengowCustomer.php|844bcb41d8b54f1fdde39f0b89727791
 /classes/models/LengowSync.php|4037133bcfe15bd083cca4f9a9615ae7
@@ -30,18 +30,18 @@
 /classes/models/LengowLink.php|b581058dd81536c028e0661e3c3c8a4e
 /classes/models/LengowInstall.php|a5c964d7c62e8c22046d82749a45c677
 /classes/models/LengowException.php|cae2699900570494aedd37f147d2b473
-/classes/models/LengowConfiguration.php|9131c9f192d9907774c8961b2a770338
+/classes/models/LengowConfiguration.php|af3ec223afeb7de0049f439d1181c6d8
 /classes/models/LengowLog.php|e55e699febf04f146755a1e65e46b5de
 /classes/models/LengowHook.php|57eaf0d3e471a74605c16360df9bc494
 /classes/models/LengowGender.php|245feec7656bdd75cd574218700e01b9
 /classes/models/LengowToolbox.php|9758f601085e1c3f99276e7312831591
 /classes/models/LengowCarrier.php|b462b17cad21592cd90d295c3e38009f
 /classes/models/LengowOrderError.php|28ece1d7bf686dda2ec5a52dc919c5c8
-/classes/models/LengowImportOrder.php|1018eec08151c2ddf5f6f6c0eed4072c
+/classes/models/LengowImportOrder.php|6b7811c55aaeaad2c0b6c76ed89d2ea2
 /classes/models/LengowOrderLine.php|86df2f3686d85537fe813520154bf517
 /classes/models/LengowTranslation.php|75e62401b0c1ff7966cb0b1ac3514cfa
 /classes/models/LengowCountry.php|466d33c65ab33278533502c00188a320
-/classes/models/LengowPaymentModule.php|5d2d313f5120e2864012f73e75a337dc
+/classes/models/LengowPaymentModule.php|ba886c99034b7c3dd662d2a502f8a109
 /classes/models/LengowMethod.php|1fc732f03c5fc06836e99914633b68db
 /classes/models/LengowOrderDetail.php|1c7afddd9691eff93bc15926a4992fd4
 /classes/models/LengowMarketplace.php|699ef81d2f7334f79dd6f1cc41874899
