@@ -353,6 +353,7 @@ lengow_setting.lengow_carrier_semantic_enable_title|I want to activate the seman
 lengow_setting.lengow_carrier_semantic_enable_legend|With this option, match the carrier or shipping method indicated by the marketplace with the name of your PrestaShop carriers.
 lengow_setting.lengow_import_days_title|Synchronize all orders updated since
 lengow_setting.lengow_anonymize_email|Anonymize customers e-mail address
+lengow_setting.lengow_active_new_order_hook|Active Hook for new Orders
 lengow_setting.lengow_import_days_legend|Activate this option if you have incorrect pending orders. It lets you re-import all orders that have been processed during this faulty period
 lengow_setting.lengow_import_processing_fee_title|Import processing fee
 lengow_setting.lengow_import_processing_fee_legend|Enable this option if you want to incorporate the marketplace processing fee into your order
