@@ -353,6 +353,7 @@ lengow_setting.lengow_carrier_semantic_enable_title|Je veux activer l'option de 
 lengow_setting.lengow_carrier_semantic_enable_legend|Avec cette option, faites correspondre le transporteur ou la méthode de transport indiqué par la marketplace avec le nom de vos transporteurs PrestaShop.
 lengow_setting.lengow_import_days_title|Synchroniser toutes les commandes mises à jour depuis
 lengow_setting.lengow_anonymize_email|Anonymiser les adresses e-mail des clients
+lengow_setting.lengow_active_new_order_hook|Activer le Hook des nouvelles commandes
 lengow_setting.lengow_import_days_legend|Activez cette option si vous avez des commandes en erreur en attente. Cela vous permet de réimporter les commandes passées depuis le dernier import réussi.
 lengow_setting.lengow_import_processing_fee_title|Importer les frais de traitement
 lengow_setting.lengow_import_processing_fee_legend|Activez cette option si vous souhaitez importer dans vos commandes les frais de traitement des marketplaces.
