@@ -353,6 +353,7 @@ lengow_setting.lengow_carrier_semantic_enable_title|Voglio attivare l'opzione di
 lengow_setting.lengow_carrier_semantic_enable_legend|Con questa opzione, fai corrispondere il corriere o il metodo di trasporto indicato dal marketplace con il nome dei vostri corrieri PrestaShop.
 lengow_setting.lengow_import_days_title|Sincronizza tutti gli ordini aggiornati da
 lengow_setting.lengow_anonymize_email|anonimizzare gli indirizzi e-mail dei clienti
+lengow_setting.lengow_active_new_order_hook|Attivare Hook di nuovi ordini
 lengow_setting.lengow_import_days_legend|Attiva questa opzione se se hai ordini sospesi incorrettamente. Ti permetterà di importare di nuovo tutti gli rodini che sono stati processati durante questo periodo di blocco
 lengow_setting.lengow_import_processing_fee_title|Importare le spese di trattamento
 lengow_setting.lengow_import_processing_fee_legend|Attiva questa opzione se vuoi integrare la marketplaces fee nel tuo ordine
