@@ -384,6 +384,7 @@ en:
     lengow_carrier_semantic_enable_legend: "With this option, match the carrier or shipping method indicated by the marketplace with the name of your PrestaShop carriers."      
     lengow_import_days_title: "Synchronize all orders updated since"
     lengow_anonymize_email: "Anonymize customers e-mail address"
+    lengow_active_new_order_hook: "Active Hook for new Orders"
     lengow_import_days_legend: "Activate this option if you have incorrect pending orders. It lets you re-import all orders that have been processed during this faulty period"
     lengow_import_processing_fee_title: "Import processing fee"
     lengow_import_processing_fee_legend: "Enable this option if you want to incorporate the marketplace processing fee into your order"
