@@ -4,6 +4,7 @@ Version 3.5.0
  - BugFix: Mutlishop get store on store 0
  - Feature: Return tracking management during shipment
  - Feature: Filters on product export page
+ - Feature: Hook newOrders activation from config import orders
 =============================================================
 Version 3.4.7
 =============================================================
